--- a/app/globals.css
+++ b/app/globals.css
@@ -60,12 +60,13 @@ image {
 }
 
 .toastify .Toastify__toast {
-  background-color: white;
-  width: 100%;
+  background-color: white; 
+  width: auto;
   padding: 10px 20px;
-  color: #000;
+  border-radius: 10px;
+}
 
-  @media screen and (min-width: 301px) and (max-width: 540px) {
-    display: none;
-  }
+.Toastify__toast-icon {
+  width: 20px;
+  height: 20px;
 }
